// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar should render 1`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              menu.svg
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
    </div>
  </div>
  <div
    class="css-1h1epd8"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sliders.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                lock.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                arrow-up-turn-bracket.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar should render responsive dropdown 1`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              menu-open.svg
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl w-full css-yq8tnb"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <ul
          data-testid="dropdown__options"
        >
          <li
            class="css-14nfam"
            data-testid="dropdown__option--0"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-600 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sliders.svg
              </svg>
            </div>
            <span>
              General
            </span>
          </li>
          <li
            class="css-x2cq94"
            data-testid="dropdown__option--1"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                lock.svg
              </svg>
            </div>
            <span>
              Password
            </span>
          </li>
          <li
            class="css-x2cq94"
            data-testid="dropdown__option--2"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                arrow-up-turn-bracket.svg
              </svg>
            </div>
            <span>
              Export
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="css-1h1epd8"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sliders.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                lock.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                arrow-up-turn-bracket.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar should render responsive dropdown 2`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              menu-open.svg
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl w-full css-yq8tnb"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <ul
          data-testid="dropdown__options"
        >
          <li
            class="css-14nfam"
            data-testid="dropdown__option--0"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-600 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sliders.svg
              </svg>
            </div>
            <span>
              General
            </span>
          </li>
          <li
            class="css-x2cq94"
            data-testid="dropdown__option--1"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                lock.svg
              </svg>
            </div>
            <span>
              Password
            </span>
          </li>
          <li
            class="css-x2cq94"
            data-testid="dropdown__option--2"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                arrow-up-turn-bracket.svg
              </svg>
            </div>
            <span>
              Export
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="css-1h1epd8"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sliders.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                lock.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                arrow-up-turn-bracket.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SideBar should render responsive dropdown 3`] = `
<DocumentFragment>
  <div
    class="relative -mx-4 lg:hidden"
  >
    <div
      class="static sm:relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="mx-4 flex cursor-pointer items-center space-x-4 overflow-hidden rounded-xl border border-theme-primary-100 p-3 dark:border-theme-secondary-800 sm:p-6"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              menu-open.svg
            </svg>
          </div>
          <span
            class="font-semibold leading-tight"
          >
            General
          </span>
        </div>
      </span>
      <div
        class="opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl w-full css-yq8tnb"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <ul
          data-testid="dropdown__options"
        >
          <li
            class="css-14nfam"
            data-testid="dropdown__option--0"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-600 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sliders.svg
              </svg>
            </div>
            <span>
              General
            </span>
          </li>
          <li
            class="css-x2cq94"
            data-testid="dropdown__option--1"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                lock.svg
              </svg>
            </div>
            <span>
              Password
            </span>
          </li>
          <li
            class="css-x2cq94"
            data-testid="dropdown__option--2"
            tabindex="0"
          >
            <div
              class="mr-3 text-theme-primary-300 group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200 css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                arrow-up-turn-bracket.svg
              </svg>
            </div>
            <span>
              Export
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="css-1h1epd8"
  >
    <ul>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-default"
        data-testid="side-menu__item--general"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="absolute inset-y-0 left-0 w-1 rounded bg-theme-primary-600"
          />
          <div
            class="mr-3"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sliders.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            General
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--password"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                lock.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Password
          </span>
        </div>
      </li>
      <li
        class="relative border-b border-theme-secondary-300 py-1 first:pt-0 last:border-0 last:pb-0 dark:border-theme-secondary-800 cursor-pointer"
        data-testid="side-menu__item--export"
      >
        <div
          class="group relative -ml-5 flex h-11 items-center rounded px-5 transition-all hover:bg-theme-secondary-100 hover:text-theme-primary-700 dark:hover:bg-black dark:hover:text-theme-secondary-200"
        >
          <div
            class="mr-3 text-theme-primary-300 transition-all group-hover:text-theme-primary-600 dark:text-theme-secondary-600 dark:group-hover:text-theme-secondary-200"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                arrow-up-turn-bracket.svg
              </svg>
            </div>
          </div>
          <span
            class="text-lg font-semibold"
          >
            Export
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
